--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.13.7",
-    "nodemon": "^2.0.12",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
